@@ -1,4 +1,9 @@
 
+2018-09-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* fileio.c [WITH_DB]: fix split key access by using the component data
+	  even if there is only one
+
 2018-09-01  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* common.c (cob_gettmpdir): check if the specified temporary location
